<resources>
	<string name="device_chooser_error_title">Couldn\'t retrieve list of supported devices</string>
	<string name="enable">Enable</string>
	<string name="update_information_description_not_available">There is no official information about the new features this update provides. Usually, such an update provides bug fixes, performance enhancements, and / or critical security updates for your device.</string>
	<string name="update_information_file_name">File name: %1$s</string>
	<string name="update_information_md5">MD5: %1$s</string>
	<string name="update_information_download_link">Since there was a download error, and the download must be restarted, you can use this link to download the update file from a browser instead. You might have to move the downloaded file from the \"Downloads\" directory to its parent directory. This is the same link the app uses to download, which is an official OnePlus OTA server link:\n%1$s</string>
	<string name="update_information_header">Update</string>
	<string name="update_information_error_title">Couldn\'t retrieve latest update data information</string>
	<string name="update_information_banner_server">Tap here to view important notices</string>
	<string name="preference_header_support">Support us</string>
	<string name="preference_header_device">Device</string>
	<string name="preference_header_ui">UI</string>
	<string name="preference_header_notifications">Notifications</string>
	<string name="preference_header_advanced">Advanced</string>
	<string name="preference_header_about">About</string>
	<string name="summary_on">Enabled</string>
	<string name="summary_off">Disabled</string>
	<string name="summary_update_method">Select a device first</string>
	<string name="summary_theme">Set theme</string>
	<string name="summary_privacy_policy">View online</string>
	<string name="summary_rate_app">Leave a 5 star review</string>
	<string name="summary_oxygen" translatable="false">v%1$s</string>
	<string name="label_buy_ad_free">Remove ads</string>
	<string name="label_theme">Theme</string>
	<string name="label_privacy_policy">Privacy policy</string>
	<string name="label_rate_app">Rate this app</string>
	<string name="key_ad_free" translatable="false">34ejrtgalsJKDf;awljker;2k3jrpwosKjdfpio24uj3tp3oiwfjdscPOKj</string>
	<string name="key_contributor" translatable="false">become_contributor</string>
	<string name="key_category_device" translatable="false">key_category_device</string>
	<string name="key_device" translatable="false">device</string>
	<string name="key_update_method" translatable="false">update_method</string>
	<string name="key_theme" translatable="false">theme</string>
	<string name="key_advanced_mode" translatable="false">advanced_mode</string>
	<string name="key_share_usage_data" translatable="false">upload_logs</string>
	<string name="key_notification_critical_message" translatable="false">recive_general_notifications</string>
	<string name="key_notification_system_update" translatable="false">receive_system_update_notifications</string>
	<string name="key_notification_new_device_supported" translatable="false">receive_new_device_notifications</string>
	<string name="key_notification_news_story_published" translatable="false">receive_news_notifications</string>
	<string name="key_rate_app" translatable="false">rate</string>
	<string name="key_privacy_policy" translatable="false">privacy_policy</string>
	<string name="key_oxygen" translatable="false">oxygen_updater</string>
	<string name="theme_additional_note">Note: if the \"Auto\" theme is active and battery saver is enabled, dark theme will automatically be used regardless of time of day to
		conserve battery</string>
	<string name="settings">Settings</string>
	<string name="settings_buy_ad_free_label">Upgrade to Ad-Free</string>
	<string name="settings_contribute_label">Help improve the app</string>
	<string name="settings_device">Device</string>
	<string name="settings_push_from_server">Informational and warning messages</string>
	<string name="settings_push_new_version">System update messages</string>
	<string name="settings_push_new_device">New device is supported</string>
	<string name="settings_push_news">News messages</string>
	<string name="settings_advanced_mode">Advanced mode</string>
	<string name="settings_update_method">Update method</string>
	<string name="settings_upload_logs">Share usage data and logs</string>
	<string name="install_options_backup">Backup my device</string>
	<string name="install_options_header">You may customize the installation process by changing the options shown below. Tap on \"Start installation\" to start the installation of the update.</string>
	<string name="install_options_keep_root">Keep my device rooted</string>
	<string name="install_options_reboot_after_install">Reboot after installation</string>
	<string name="install_options_select_root_package">Select the root package to install…</string>
	<string name="install_options_start_install">Start installation</string>
	<string name="install_options_wipe_cache_partition">Wipe the cache partition</string>
	<string name="install_options_explanation_title">What do these options mean?</string>
	<string name="install_options_explanation_backup">Backup my device:\nWhen you select this option, a backup of your system, apps and settings will be made prior to the installation. Always handy to have, in case something goes horribly wrong.</string>
	<string name="install_options_explanation_keep_root">Keep my device rooted:\nWhen you select this option, you may specify a root package which will be installed after the update is installed. This ensures that your device stays rooted. Please note that this root package must be compatible with the NEW OxygenOS version you are going to install!</string>
	<string name="install_options_explanation_wipe_cache">Wipe the cache partition:\nWhen you select this option, the cache partition will be wiped after the update has been installed. This ensures your device performs optimally and also reduces the likelihood of experiencing bugs caused by the installation of the update.</string>
	<string name="install_options_explanation_reboot">Reboot after installation:\nWhen you select this option, your device will automatically reboot back to OxygenOS after the update is installed. Otherwise, your device will stay in Recovery Mode, where you can install additional packages.</string>
	<string name="install_zip_file_clear">Clear root package file</string>
	<string name="install_zip_file_pick">Choose root package file</string>
	<string name="about">About</string>
	<string name="about_description">This app downloads official updates directly from OnePlus servers, and even verifies the integrity of the downloaded ZIP before allowing you to install. By doing so, the app allows you to skip the rollout queue and install official updates ASAP. If you encounter bugs in the OS, report them to OnePlus directly: <a href="https://forums.oneplus.com/feedback">https://forums.oneplus.com/feedback</a>. You might want to join our <a href="https://discord.gg/5TXdhKJ">Discord server</a> as well, so that you can talk to other users about the latest updates. Otherwise feel free to email us at <a href="mailto:support@oxygenupdater.com">support@oxygenupdater.com</a> with your suggestions/feedback.</string>
	<string name="about_support">If you\'d like to support us, you can either buy the ad-free unlock (app\'s settings), or check our <a href="https://patreon.com/oxygenupdater">Patreon page</a>.</string>
	<string name="about_background_story_header">Background story</string>
	<string name="about_background_story">This app was originally developed by Arjan Vlek as a follow-up of another one of his apps, called <a href="https://cyanogenupdatetracker.com/">Cyanogen Update Tracker</a> (it provides similar functionality for Cyanogen OS users).\n\nAfter 4 years, in July 2019, Arjan decided to step down from both projects and transferred ownership of the app to a team of developers hailing from different countries. They took on the responsibility of providing the community with excellent service &amp; support of getting OnePlus updates faster.\nYou can find more information about the announcement <a href="https://oxygenupdater.com/api/v2.6/news-content/81/EN">here</a>.\n\n14th August 2019 marked the first release under new ownership, which came with new features like dark mode and a complete redesign.\n\nFor more information on the team, check <a href="https://oxygenupdater.com/team/">the website</a>.</string>
	<string name="about_third_party_app_notice">Please note, this is not an official OnePlus application.\nThe OnePlus name, the OnePlus Logo and OxygenOS are property of OnePlus.\nAndroid, Google, Google Play and the Google Play logo are registered trademarks of Google Inc.\nThis app uses data from OnePlus and its parent company Oppo to show update information.</string>
	<string name="help">Help</string>
	<string name="help_text">Welcome to the help section of Oxygen Updater.\n\nHelp covers the following topics:\n\n• Updating your device\n• Reading the latest news\n• Viewing device information\n• Changing settings\n\nScroll down to browse through the topics.</string>
	<string name="help_updating_your_device_title">Updating your device</string>
	<string name="help_updating_your_device_text">When opening the app, you\'ll see if a system update is available. If an update is available, you can install it.\n\nTo start the installation, tap the \"Download\" button (below the update description) to start the download. When the download has finished, the installation screen pops up. If you left the app or the screen didn\'t pop up, tap the \"Install\" button, which is now shown next to the \"Download\" button.\n\nThe install screen will first check if you have a rooted device. If you have a rooted device, grant root permission when asked and choose how you want to install the update. Otherwise, follow the instructions for Manual install.\n\nAutomatic install:\nYou\'ll only have to choose your install options. The default settings are recommended, except that you have to specify the root package which needs to be (re)installed. Select a root package (zip file) using the blue folder button and tap on \"Start install\" to start the installation.\n\nManual install:\nYou\'ll see an installation guide on your screen. Write the instructions down and perform them as stated to install the update.</string>
	<string name="help_reading_news_title">Reading the latest news</string>
	<string name="help_reading_news_text">News is displayed to the left of the Update screen. The most recent items appear on top. Just tap on an item to read it.\nTap the back arrow or press your back key to return to the news items screen.</string>
	<string name="help_device_information_title">Viewing information about your device</string>
	<string name="help_device_information_text">You may view some of the specifications of your device using the screen to the right of the Update screen. This comes in handy when making a support request, during which you might be asked for some of the specifications of your device.</string>
	<string name="help_change_settings_title">Changing settings</string>
	<string name="help_change_settings_text">You can change your settings by tapping the three dots in the top right, following a tap on Settings.\nYou can change the following settings:\n\n• Device and update method\n• Push notifications\n• In app notifications\n• Privacy settings (log uploading).\n\nUse the switches to turn notification / privacy settings on and off. Select a device and / or update method using the dropdown menus shown above the switches. Dropdown menus not visible? Check your Internet connection and open the Settings screen again.</string>
	<string name="contribute">Become a contributor</string>
</resources>