<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:transitionName="toolbar">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/ToolbarTheme"
			app:title="@string/help" />
	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fadingEdge="vertical"
		android:fadingEdgeLength="@dimen/spacing_4x"
		android:requiresFadingEdge="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingTop="@dimen/spacing_default"
			android:paddingBottom="@dimen/spacing_default">

			<!-- Help -->
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:layout_marginStart="@dimen/spacing_default"
				android:layout_marginEnd="@dimen/spacing_default"
				android:text="@string/help_text" />

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginTop="@dimen/spacing_default"
				android:layout_marginBottom="@dimen/spacing_default"
				android:background="@color/backgroundVariant" />

			<!-- Updating your device -->
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_default"
				android:layout_marginEnd="@dimen/spacing_default"
				android:fontFamily="@font/google_sans_medium"
				android:text="@string/help_updating_your_device_title"
				android:textSize="@dimen/typography_subheading" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_default"
				android:layout_marginTop="@dimen/spacing_default"
				android:layout_marginEnd="@dimen/spacing_default"
				android:text="@string/help_updating_your_device_text" />

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginTop="@dimen/spacing_default"
				android:layout_marginBottom="@dimen/spacing_default"
				android:background="@color/backgroundVariant" />

			<!-- Reading news -->
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_default"
				android:layout_marginEnd="@dimen/spacing_default"
				android:fontFamily="@font/google_sans_medium"
				android:text="@string/help_reading_news_title"
				android:textSize="@dimen/typography_subheading" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_default"
				android:layout_marginTop="@dimen/spacing_default"
				android:layout_marginEnd="@dimen/spacing_default"
				android:text="@string/help_reading_news_text" />

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginTop="@dimen/spacing_default"
				android:layout_marginBottom="@dimen/spacing_default"
				android:background="@color/backgroundVariant" />

			<!-- Viewing device information -->
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_default"
				android:layout_marginEnd="@dimen/spacing_default"
				android:fontFamily="@font/google_sans_medium"
				android:text="@string/help_device_information_title"
				android:textSize="@dimen/typography_subheading" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_default"
				android:layout_marginTop="@dimen/spacing_default"
				android:layout_marginEnd="@dimen/spacing_default"
				android:text="@string/help_device_information_text" />

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginTop="@dimen/spacing_default"
				android:layout_marginBottom="@dimen/spacing_default"
				android:background="@color/backgroundVariant" />

			<!-- Changing settings -->
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_default"
				android:layout_marginEnd="@dimen/spacing_default"
				android:fontFamily="@font/google_sans_medium"
				android:text="@string/help_change_settings_title"
				android:textSize="@dimen/typography_subheading" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_default"
				android:layout_marginTop="@dimen/spacing_default"
				android:layout_marginEnd="@dimen/spacing_default"
				android:text="@string/help_change_settings_text" />
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
