<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/app_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:transitionName="toolbar">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			app:popupTheme="@style/ToolbarPopupStyle" />
	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/spacing_default"
			android:layout_marginEnd="@dimen/spacing_default"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_default"
				android:text="@string/install_options_title"
				android:textAlignment="center"
				android:textStyle="bold" />

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/customizeSettingsContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="@dimen/spacing_default">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/spacing_half"
					android:orientation="vertical">

					<TextView
						android:id="@+id/customizeSettingsExplanation"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/spacing_half"
						android:text="@string/install_options_header" />

					<LinearLayout
						android:id="@+id/backupDeviceContainer"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center">

						<TextView
							android:id="@+id/backupDeviceLabel"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/install_options_backup" />

						<com.google.android.material.switchmaterial.SwitchMaterial
							android:id="@+id/backupDeviceSwitch"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" />
					</LinearLayout>

					<LinearLayout
						android:id="@+id/keepDeviceRootedContainer"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/spacing_half"
						android:gravity="center">

						<TextView
							android:id="@+id/keepDeviceRootedLabel"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/install_options_keep_root" />

						<com.google.android.material.switchmaterial.SwitchMaterial
							android:id="@+id/keepDeviceRootedSwitch"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" />
					</LinearLayout>

					<LinearLayout
						android:id="@+id/additionalZipContainer"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/spacing_half"
						android:gravity="center"
						android:visibility="visible">

						<TextView
							android:id="@+id/additionalZipFilePath"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginStart="@dimen/spacing_half"
							android:layout_weight="1"
							android:enabled="false"
							android:text="@string/install_options_select_root_package" />

						<ImageButton
							android:id="@+id/additionalZipFileClearButton"
							android:layout_width="@dimen/spacing_2x"
							android:layout_height="@dimen/spacing_2x"
							android:background="@android:color/transparent"
							android:contentDescription="@string/install_zip_file_clear"
							android:src="@drawable/cancel"
							android:tint="?colorPrimary" />

						<ImageButton
							android:id="@+id/additionalZipFilePickButton"
							android:layout_width="@dimen/spacing_2x"
							android:layout_height="@dimen/spacing_2x"
							android:layout_marginEnd="@dimen/spacing_half"
							android:background="@android:color/transparent"
							android:contentDescription="@string/install_zip_file_pick"
							android:src="@drawable/folder"
							android:tint="@color/colorPositive" />
					</LinearLayout>

					<LinearLayout
						android:id="@+id/wipeCachePartitionContainer"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/spacing_half">

						<TextView
							android:id="@+id/wipeCachePartitionLabel"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/install_options_wipe_cache_partition" />

						<com.google.android.material.switchmaterial.SwitchMaterial
							android:id="@+id/wipeCachePartitionSwitch"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" />
					</LinearLayout>

					<LinearLayout
						android:id="@+id/rebootAfterInstallContainer"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/spacing_half">

						<TextView
							android:id="@+id/rebootAfterInstallLabel"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/install_options_reboot_after_install" />

						<com.google.android.material.switchmaterial.SwitchMaterial
							android:id="@+id/rebootAfterInstallSwitch"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" />
					</LinearLayout>

					<com.google.android.material.button.MaterialButton
						android:id="@+id/startInstallButton"
						style="@style/Widget.MaterialComponents.Button.TextButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:layout_marginTop="@dimen/spacing_half"
						android:text="@string/install_options_start_install" />
				</LinearLayout>
			</com.google.android.material.card.MaterialCardView>

			<LinearLayout
				android:id="@+id/settingsExplanationContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_half"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/spacing_half"
					android:layout_marginBottom="@dimen/spacing_half"
					android:text="@string/install_options_explanation_title"
					android:textAlignment="center"
					android:textStyle="bold" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/spacing_half"
					android:layout_marginBottom="@dimen/spacing_half"
					android:text="@string/install_options_explanation_backup" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/spacing_half"
					android:layout_marginBottom="@dimen/spacing_half"
					android:text="@string/install_options_explanation_keep_root" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/spacing_half"
					android:layout_marginBottom="@dimen/spacing_half"
					android:text="@string/install_options_explanation_wipe_cache" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/spacing_half"
					android:layout_marginBottom="@dimen/spacing_half"
					android:text="@string/install_options_explanation_reboot" />
			</LinearLayout>
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
