<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fadingEdge="vertical"
	android:fadingEdgeLength="@dimen/spacing_2x"
	android:requiresFadingEdge="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/buttonRecyclerView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
			app:spanCount="2" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/appDescriptionTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_default"
			android:text="@string/about_description" />

		<TextView
			android:id="@+id/appSupportTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/spacing_default"
			android:text="@string/about_support" />

		<TextView
			android:id="@+id/backgroundStoryHeader"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_default"
			android:fontFamily="@font/google_sans_medium"
			android:text="@string/about_background_story_header"
			android:textSize="@dimen/typography_subheading" />

		<TextView
			android:id="@+id/backgroundStoryTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/spacing_default"
			android:linksClickable="true"
			android:text="@string/about_background_story"
			android:textColorLink="?colorPrimary" />

		<View
			android:id="@+id/backgroundStoryDivider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginTop="@dimen/spacing_default"
			android:background="@drawable/divider" />

		<TextView
			android:id="@+id/thirdPartyAppNoticeTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_default"
			android:text="@string/about_third_party_app_notice"
			android:textColor="?android:textColorSecondary"
			android:textSize="@dimen/typography_caption" />
	</LinearLayout>
</androidx.core.widget.NestedScrollView>
